--- a/bedrock/base/templates/macros.html
+++ b/bedrock/base/templates/macros.html
@@ -596,7 +596,7 @@
   {# If no App Store link is specified, use base with default "ct" param value #}
   {# See https://bugzilla.mozilla.org/show_bug.cgi?id=1196310#c23 #}
   {% if ios_link == '' %}
-    {% set ios_link = settings.APPLE_APPSTORE_FIREFOX_LINK + '&ct=mozorg' %}
+    {% set ios_link = firefox_ios_url('mozorg') %}
   {% endif %}
   {% set android_link = settings.GOOGLE_PLAY_FIREFOX_LINK %}
   <section id="send-to-device" class="{% if include_logo %}logo {% endif %}{% if include_title %}title{% else %}no-title{% endif %}">
