--- a/bedrock/firefox/templates/firefox/mobile-download.html
+++ b/bedrock/firefox/templates/firefox/mobile-download.html
@@ -55,7 +55,7 @@
             </a>
           </li>
           <li class="ios">
-            <a href="{{ settings.APPLE_APPSTORE_FIREFOX_LINK }}&amp;ct=mozorg-heartbeat_landing-button">
+            <a href="{{ firefox_ios_url('mozorg-heartbeat_landing-button') }}">
               <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}" width="152" height="45">
             </a>
           </li>
