--- a/bedrock/firefox/templates/firefox/private-browsing.html
+++ b/bedrock/firefox/templates/firefox/private-browsing.html
@@ -43,7 +43,7 @@
               </a>
             </div>
             <div class="ios-download-button">
-              <a href="{{ settings.APPLE_APPSTORE_FIREFOX_LINK }}&amp;ct=mozorg-ios_page-appstore-button">
+              <a href="{{ firefox_ios_url('mozorg-ios_page-appstore-button') }}">
                 <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}">
               </a>
             </div>
@@ -141,7 +141,7 @@
             </a>
           </div>
           <div class="ios-download-button">
-            <a href="{{ settings.APPLE_APPSTORE_FIREFOX_LINK }}&amp;ct=mozorg-ios_page-appstore-button">
+            <a href="{{ firefox_ios_url('mozorg-ios_page-appstore-button') }}">
               <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}">
             </a>
           </div>
