[bug 1231201] Remove optimizely on variant 3

--- a/bedrock/firefox/templates/firefox/new.html
+++ b/bedrock/firefox/templates/firefox/new.html
@@ -50,8 +50,10 @@
 {% endblock %}
 
 {% block optimizely %}
-  {% if waffle.switch('firefox-new-optimizely') %}
-     {% include 'includes/optimizely.html' %}
+  {% if variant != '3' %}
+    {% if waffle.switch('firefox-new-optimizely') %}
+       {% include 'includes/optimizely.html' %}
+    {% endif %}
   {% endif %}
 {% endblock %}
 
