--- a/bedrock/mozorg/templates/mozorg/mosaic-grid.html
+++ b/bedrock/mozorg/templates/mozorg/mosaic-grid.html
@@ -2,7 +2,7 @@
  # License, v. 2.0. If a copy of the MPL was not distributed with this
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-<div id="mosaic" class="ri-grid">
+<div id="mosaic" class="ri-grid" data-loading="{{ static('img/mosaic/loading.gif') }}">
   <ul>
   {% for i in range(1, 67) %}
     <li><a><img src="{{ static('img/mosaic/' ~ '%03d'|format(i) ~ '.jpg') }}" alt=""></a></li>
