Fix bug 1225630 update foundation page copy

--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -14,46 +14,81 @@
 
 {% block article %}
   <p>
-    {% trans
-      causes=url('mozorg.mission')
-    %}
-      The Mozilla Foundation is a non-profit organization that promotes
-      openness, innovation and participation on the Internet. We promote
-      the values of an <a href="{{ causes }}">open Internet</a> to the
-      broader world.
+    {% trans %}
+      The nonprofit Mozilla Foundation is the organizational home of the
+      Mozilla Project, a global community and public interest initiative
+      that believes the Web should be open and accessible to all. To
+      protect the Web as a public resource and empower its users, we
+      create open source products, teach 21st-century skills and spur
+      grassroots advocacy campaigns. All this is made possible by
+      full-time staff and thousands of volunteers around the world.
     {% endtrans %}
   </p>
 
   <p>
     {% trans
       firefox=url('firefox.new'),
-      projects=url('firefox.family.index'),
-      grants=url('grants'),
-      webmaker="https://webmaker.org/"
+      firefox_os=url('firefox.os.index')
     %}
-      Mozilla is best known for the <a href="{{ firefox }}">Firefox </a>
-      browser, but we advance our mission through other
-      <a href="{{ projects }}">software projects</a>,
-      <a href="{{ grants }}">grants</a> and engagement and education
-      efforts such as <a href="{{ webmaker }}">Mozilla Webmaker</a>.
+      To keep the Web accessible, we build products that create
+      opportunity and inspire further innovation. Many of Mozilla’s
+      products are developed by the Mozilla Corporation, a wholly-owned
+      subsidiary of the Mozilla Foundation. The Mozilla Corporation
+      functions as a self-sustaining social enterprise — money earned
+      through its products is reinvested into the organization. Products
+      include our flagship <a href="{{ firefox }}">Firefox browser</a>,
+      <a href="{{ firefox_os }}">Firefox OS</a>, and other open source
+      tools. The Mozilla Corporation also partners with like-minded allies
+      to bring an open source ethos to industries and technologies like
+      online video, telecommunications and virtual reality.
     {% endtrans %}
   </p>
 
   <p>
-    {% trans %}
-      Webmaker is all about building a new generation of digital
-      creators and webmakers, giving people the tools and skills they
-      need to move from <strong>using</strong> the web to actively
-      <strong>making</strong> the web.
+    {% trans 
+      hive="https://hivelearningnetworks.org/",
+      clubs="https://teach.mozilla.org/clubs/",
+      parties="https://teach.mozilla.org/events/",
+      thimble="https://thimble.mozilla.org/",
+      webmaker="http://mzl.la/webmaker",
+      open_news="https://opennews.org/",
+      open_web="https://advocacy.mozilla.org/open-web-fellows/",
+      science="https://www.mozillascience.org/",
+      festival="http://festival.mozilla.org"
+    %}
+      Mozilla is also committed to empowering individuals online and
+      unlocking opportunity through education. We believe in the importance
+      of universal web literacy: creating a world where everyone can read,
+      write and participate online. Most of our web literacy work is carried
+      out by the Foundation and the Mozilla community directly. Our
+      <a href="{{ hive }}">Hive Learning Networks</a> are robust educational
+      communities in cities around the world, and
+      <a href="{{ clubs }}">Mozilla Clubs</a> and
+      <a href="{{ parties }}">Maker Parties</a> teach web literacy through
+      hands-on and peer-to-peer learning. Our educational tools like the 
+      <a href="{{ thimble }}">Thimble code editor</a> and
+      <a href="{{ webmaker}}">Webmaker for Android</a> transform individuals
+      from Web consumers into Web creators. And our leadership pipelines — 
+      the <a href="{{ open_news }}">OpenNews</a>,
+      <a href="{{open_web}}">Open Web</a> and
+      <a href="{{ science }}">Mozilla Science</a> fellowship programs, and
+      the <a href="{{ festival }}">annual Mozilla Festival</a> — cultivate
+      bright minds and bring the values of the open Web into the sectors of
+      journalism, public policy and science. As a nonprofit, much of
+      Mozilla’s work in the education space is made possible through your
+      donations and the efforts of volunteers.
     {% endtrans %}
   </p>
 
   <p>
-    {% trans badges="http://openbadges.org/" %}
-      Other projects, like Mozilla <a href="{{ badges }}">Open Badges</a>,
-      seek to unlock the full educational potential of the web by making
-      it easy for users to get recognition for skills they learn online
-      and offline.
+    {% trans advocacy="https://advocacy.mozilla.org/" %}
+      Mozilla also carries out <a href="{{ advocacy }}">advocacy work</a>.
+      We defend the Web against companies and governments that seek to
+      wrest control away from the public. Our advocacy work addresses
+      issues like net neutrality, privacy and mass surveillance, and often
+      requires effort from all corners of the Mozilla Project. Our grassroots
+      campaigns stretch from the U.S. to India to Germany and beyond, but
+      share a common goal: ensuring the Web remains free and open.
     {% endtrans %}
   </p>
 
@@ -62,10 +97,9 @@
       donate=donate_url('foundation'),
       contribute=url('mozorg.contribute')
     %}
-      If you're interested in supporting our efforts, please consider getting
-      involved with Mozilla Webmaker or Open Badges, making a
-      <a href="{{ donate }}">donation</a> or
-      <a href="{{ contribute }}">getting involved</a> with the Mozilla community.
+      You can join us and help protect the Web as a global public resource.
+      To get started, <a href="{{ donate }}">make a donation</a> or
+      <a href="{{ contribute }}">become involved with our community</a>.
     {% endtrans %}
   </p>
 {% endblock %}
