--- a/bedrock/firefox/templates/firefox/firstrun/firstrun.html
+++ b/bedrock/firefox/templates/firefox/firstrun/firstrun.html
@@ -21,10 +21,10 @@
 {#- Override <meta property="og:url"> for social share -#}
 {% block page_og_url %}{{ url('firefox') }}{% endblock %}
 
-{% block body_class %}mozID variant-e{% endblock %}
+{% block body_class %}mozID variant-g{% endblock %}
 
 {% block site_css %}
-  {% stylesheet 'firefox_variants_firstrun' %}
+  {% stylesheet 'firefox_firstrun' %}
 {% endblock %}
 
 {% block optimizely %}
@@ -49,24 +49,18 @@
 {% block content %}
 <section id="intro" data-fxa-iframe-src="{{ settings.FXA_IFRAME_SRC }}">
   <div class="container">
-    <div id="logo">
-      {{ high_res_img('firefox/australis/fx38.0.5/firefox-logo.png', {'alt': 'Firefox', 'width': '142', 'height': '147'}) }}
-    </div>
-
-    {#  copy right #}
-    <div class="rightcol">
+    <header>
       <h1>{{ _('Almost done!') }}</h1>
+      <h2>{{ _('Sign in to Firefox and you’re good to go.') }}</h2>
+    </header>
 
-      {# L10n: Line break below for visual formatting only. #}
-      <h2>{{ _('Sign in to Firefox and <br>you’re good to go.') }}</h2>
+    <main role="main">
+      <div class="fxaccounts">
+        <iframe id="fxa" scrolling="no" data-src="{{ settings.FXA_IFRAME_SRC }}?utm_campaign=fxa-embedded-form&amp;utm_medium=referral&amp;utm_source=firstrun&amp;utm_content=fx-{{ version }}&amp;entrypoint=firstrun&amp;service=sync&amp;context=iframe&amp;style=chromeless&amp;haltAfterSignIn=true"></iframe>
+      </div>
 
       <p>{{ _('With your Firefox Account you can sync your bookmarks, passwords, open tabs and more, and access them everywhere you use Firefox.') }}</p>
-    </div>
-
-    {#  form left #}
-    <div class="leftcol">
-      <iframe id="fxa" scrolling="no" data-src="{{ settings.FXA_IFRAME_SRC }}?utm_campaign=fxa-embedded-form&amp;utm_medium=referral&amp;utm_source=firstrun&amp;utm_content=fx-{{ version }}&amp;entrypoint=firstrun&amp;service=sync&amp;context=iframe&amp;style=chromeless&amp;haltAfterSignIn=true"></iframe>
-    </div>
+    </main>
   </div>
 </section>
 {% endblock %}
@@ -77,22 +71,15 @@
 <footer id="footer">
   <div class="container">
     <a class="mozlogo" href="{{ url('mozorg.home') }}">Mozilla</a>
-
     <ul>
-      <li>
-        <a href="{{ url('privacy') }}">{{ _('Privacy Policy') }}</a>
-      </li>
-      <li>
-        <a href="{{ url('privacy.notices.websites') }}#cookies">{{ _('Cookies') }}</a>
-      </li>
-      <li>
-        <a href="{{ url('legal.index') }}">{{ _('Legal Notices') }}</a>
-      </li>
+      <li><a href="{{ url('privacy') }}">{{ _('Privacy Policy') }}</a></li>
+      <li><a href="{{ url('privacy.notices.websites') }}#cookies">{{ _('Cookies') }}</a></li>
+      <li><a href="{{ url('legal.index') }}">{{ _('Legal Notices') }}</a></li>
     </ul>
   </div>
 </footer>
 {% endblock %}
 
 {% block js %}
-  {% javascript 'firefox_fx40_firstrun' %}
+  {% javascript 'firefox_firstrun' %}
 {% endblock %}
