[fix bug 1232698] Improve unsupported platform UX on /firefox/new/.

--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -98,7 +98,7 @@ html.oldmac,
 html.oldwin {
     .download-button .unsupported-download {
         margin: 32px 0 0;
-        text-align: left;
+        text-align: center;
     }
 }
 
@@ -570,7 +570,6 @@ noscript {
     html.oldmac,
     html.oldwin {
         .download-button .unsupported-download {
-            text-align: left;
             max-width: none;
         }
     }
