[fix bug 1232714] Show dl button for no-JS users on /firefox/desktop.

--- a/media/css/firefox/desktop/index.less
+++ b/media/css/firefox/desktop/index.less
@@ -42,7 +42,14 @@
 
 // download buttons
 
-#overview-intro-download-wrapper {
+// make text readable for no-JS users
+#overview-intro-download-wrapper .download-dumb .download-heading {
+    color: @textColorPrimary;
+    text-align: center;
+}
+
+// let JS decide if we should show the intro download button
+.js #overview-intro-download-wrapper {
     display: none;
 }
 
