--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -210,6 +210,18 @@
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/eric-rescorla/">
+          <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/eric-rescorla.jpg') }}">
+          <span class="fn" itemprop="name">Eric Rescorla</span>
+        </a>
+        <span class="title" itemprop="jobTitle">{{ _('Fellow') }}</span>
+
+        <ul class="elsewhere">
+          <li><a class="url book" itemprop="url" href="https://mozillians.org/u/ekr/">{{ _('Mozillians profile') }}</a></li>
+        </ul>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <a class="url" itemprop="url" href="https://blog.mozilla.org/press/bios/sylvie-veilleux/">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/sylvie-veilleux.jpg') }}">
           <span class="fn" itemprop="name">Sylvie Veilleux</span>
