--- a/bedrock/firefox/templates/firefox/whatsnew-fx37.html
+++ b/bedrock/firefox/templates/firefox/whatsnew-fx37.html
@@ -45,10 +45,10 @@
 {% endblock %}
 
 {% macro thank_you_message() %}
-  {# L10n: Thank you message after sending the SMS/email #}
+  {# L10n: Thank you message after sending the email #}
   {{_('Check your device to start downloading.') }}
   <p><a role="button" href="#send-another" class="send-another more">
-    {# L10n: Thank you message after sending the SMS/email #}
+    {# L10n: Thank you message after sending the email #}
     {{ _('Send to another device') }}
   </a></p>
 {%- endmacro %}
@@ -62,9 +62,6 @@
   </header>
   <nav class="toggle">
     <ul role="tablist">
-      <li role="presentation" class="sms-tab">
-        <a id="tab-sms" role="tab" aria-controls="send-sms" href="#send-sms">{{ _('Send by text message') }}</a>
-      </li>
       <li role="presentation" class="email-tab">
         <a id="tab-email" role="tab" aria-controls="send-email" href="#send-email">{{ _('Send by email') }}</a>
       </li>
@@ -86,39 +83,6 @@
           {% endtrans %}
           <br>{{ _('The intended recipient of the email must have consented.') }} <a href="{{ url('privacy.notices.websites') }}#campaigns">{{ _('Learn more') }}</a>
         </footer>
-      </section>
-      <section id="send-sms" class="tab-content">
-        <div class="inner-wrapper">
-          <div class="sms-form-wrapper">
-            <h3>{{ _('Send Firefox to your Android phone') }}</h3>
-            <form id="sms-form" method="post" action="{{ secure_url('firefox.sms') }}">
-              <div class="input">
-                <label for="number">{{ _('Enter your 10-digit phone number') }}</label>
-                <input type="tel"
-                       maxlength="14"
-                       id="number"
-                       name="number"
-                       placeholder="{{ _('Enter your 10-digit phone number') }}"
-                       value=""
-                       required>
-                <p class="error hidden">{{ _('An error occurred in our system. Please try again later.') }}</p>
-              </div>
-              <button type="submit">{{ _('Send') }}</button>
-            </form>
-            <div id="sms-form-thank-you">
-              <h3>{{ _('Your link has been sent!') }}</h3>
-              <p>{{ thank_you_message() }}</p>
-            </div>
-            <div id="sms-spinner" class="hidden"></div>
-          </div>
-          <footer>
-            {% trans url=settings.GOOGLE_PLAY_FIREFOX_LINK %}
-              Also available from <a href="{{ url }}">Google Play</a>.
-            {% endtrans %}
-            <br>
-            {{ _('SMS service available in the U.S. only.') }} {{ _('SMS & data rates may apply. The intended recipient of the SMS must have consented.') }} <a href="{{ url('privacy.notices.websites') }}#campaigns">{{ _('Learn more') }}</a>
-          </footer>
-        </div>
       </section>
     </div>
   </div>
