--- a/media/css/firefox/new-v2.less
+++ b/media/css/firefox/new-v2.less
@@ -436,8 +436,12 @@ html.fxos {
 }
 // end scene 2
 
-noscript {
-    .button-white, .button-white:link, .button-white:visited {
+.download-button .unrecognized-download .download-dumb {
+    .download-heading {
+        color: @textColorPrimary;
+    }
+
+    .button-green, .button-green:link, .button-green:visited {
         min-width: 0;
     }
 }
