--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -449,8 +449,12 @@ html[lang|="en"] #main-headline span:first-child {
 }
 // end scene 2
 
-noscript {
-    .button-white, .button-white:link, .button-white:visited {
+.download-button .unrecognized-download .download-dumb {
+    .download-heading {
+        color: @textColorPrimary;
+    }
+
+    .button-green, .button-green:link, .button-green:visited {
         min-width: 0;
     }
 }
