--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -692,7 +692,8 @@ html[lang^='en'] {
 
 .other .download-button,
 .android .download-button-desktop,
-.ios .download-button-desktop {
+.ios .download-button-desktop,
+.no-js .download-button {
     .unrecognized-download {
         display: block;
     }
