[fix bug 1234136] App Store button on release notes page is 404

--- a/bedrock/firefox/templates/firefox/family/index.html
+++ b/bedrock/firefox/templates/firefox/family/index.html
@@ -134,7 +134,7 @@
           {% endif %}
           </a>
 
-          <a rel="external" href="{{ firefox_ios_url() }}" class="btn-apple-appstore" data-product="Firefox for iOS, App Store">
+          <a rel="external" href="{{ firefox_ios_url('mozorg-products_page-appstore-button') }}" class="btn-apple-appstore" data-product="Firefox for iOS, App Store">
             <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}" width="135" height="40">
           </a>
         </div>
