--- a/bedrock/firefox/templates/firefox/ios.html
+++ b/bedrock/firefox/templates/firefox/ios.html
@@ -35,7 +35,7 @@
   {% if waffle.switch('firefox-ios-global') %}
     {% call fxfamilynav('ios', 'index') %}
       <div class="{% if has_widget %}show-widget{% endif %}">
-        <a class="dl-button" rel="external" href="{{ firefox_ios_url() }}">
+        <a class="dl-button" rel="external" href="{{ firefox_ios_url('mozorg-ios_page-appstore-button') }}">
           <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}">
         </a>
         <button class="send-to button-flat-dark" type="button">{{ _('Get Firefox for iOS') }}</button>
