--- a/media/css/firefox/new.less
+++ b/media/css/firefox/new.less
@@ -92,6 +92,11 @@
     z-index: 2;
 }
 
+// hide supplementary button links from WinXP users
+.winxp .download-other-desktop {
+    display: none !important;
+}
+
 /* Unsupported platforms */
 html.windows.arm,
 html.oldmac,
