--- a/media/css/sandstone/buttons.less
+++ b/media/css/sandstone/buttons.less
@@ -726,6 +726,22 @@ html[lang^='en'] {
 
 }
 
+// winxp hack
+.download-button-winxp {
+    display: none;
+}
+
+.winxp {
+    #download-button-desktop-release,
+    .download-button-desktop {
+        display: none;
+    }
+
+    .download-button-winxp {
+        display: inline-block;
+    }
+}
+
 // ios tweaks
 
 .ios-download a:before {
