--- a/bedrock/firefox/templates/firefox/os/ver/2.5.html
+++ b/bedrock/firefox/templates/firefox/os/ver/2.5.html
@@ -25,6 +25,10 @@
   </div>
 {% endblock %}
 
+{% block callout %}
+  {% include '/firefox/os/_in_the_news.html' %}
+{% endblock %}
+
 {% block features_headline %}
   <h2>{{_('The Web is the platform')}}</h2>
 {% endblock %}
