--- a/bedrock/mozorg/templates/mozorg/credits.html
+++ b/bedrock/mozorg/templates/mozorg/credits.html
@@ -43,7 +43,7 @@
 {# Use absolute URLs here; relative ones do not work when the page is accessed as "about:credits" #}
 <p>
   This is a list of people who have "made a significant investment of time, with useful results,
-  into <a href="{{ secure_url('mozorg.home') }}">Mozilla project</a>-governed activities". Any such
+  into <a href="/">Mozilla project</a>-governed activities". Any such
   contributors who wish to be added to the list should <a href="https://docs.google.com/forms/d/1rwLVzr1Fql9ZtAKkG_z5jcRczn2uy84zqwBX9gX52OY/viewform">fill in this form</a>.
   There is a <a href="{{ secure_url('mozorg.credits-faq') }}">FAQ</a> about this process. The list was last updated {{ credits.last_modified|datetime }}.
 </p>
