Bug 1234843 - note that NSPR and NSS now live in Hg

--- a/bedrock/mozorg/templates/mozorg/about/governance/policies/commit/access-policy.html
+++ b/bedrock/mozorg/templates/mozorg/about/governance/policies/commit/access-policy.html
@@ -1,4 +1,4 @@
-{# This Source Code Form is subject to the terms of the Mozilla Public
+  {# This Source Code Form is subject to the terms of the Mozilla Public
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
@@ -78,15 +78,15 @@ This is the lowest level of access. It allows someone to check in to the <a href
 
 <p>{{ _('Some trees, most often those from which code is pushed automatically into use on major Mozilla websites, requires special permission for checkin access. You need permission from the listed owner in order to get access to check in to their tree. The trees and owners are:') }}</p>
 
-<h4>{{ _('CVS') }}</h4>
+<h4>{{ _('Hg') }}</h4>
 
 <table class="table module-table">
   <tr>
-    <td>/nss</td>
+    <td><a href="http://hg.mozilla.org/projects/nss/">projects/nss</a></td>
     <td>Wan-Teh Chang</td>
   </tr>
   <tr>
-    <td>/nspr</td>
+    <td><a href="http://hg.mozilla.org/projects/nspr/">projects/nspr</a></td>
     <td>Wan-Teh Chang</td>
   </tr>
 </table>
