--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -409,7 +409,7 @@
         </a>
       </li>
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <a class="url" itemprop="url" href="http://joi.ito.com/">
+        <a class="url" itemprop="url" href="http://www.media.mit.edu/new-director/bio">
           <img class="photo" itemprop="image" alt="" src="{{ static('img/mozorg/about/leadership/joi-ito.jpg') }}">
           <span class="fn" itemprop="name">Joi Ito</span>
         </a>
