--- a/bedrock/firefox/templates/firefox/os/_get_device.html
+++ b/bedrock/firefox/templates/firefox/os/_get_device.html
@@ -130,7 +130,7 @@
           <h3>{{_('Mexico')}}</h3>
           <ul>
             <li><a class="movistar" href="http://www.movistar.com.mx/tienda/Open-Catalog/Productos/Celulares/c/celulares?q=%3Aname-asc%3Asistemaoperativo%3AFirefox">Movistar</a></li>
-            <li><a class="telcel" href="http://www.telcel.com/portal/equipos/begin.do?idEquipo=3883">Telcel</a></li>
+            <li><a class="telcel" href="http://www.telcel.com/personas/equipos/telefonos-y-smartphones/alcatel/4012">Telcel</a></li>
           </ul>
         </div>
         <div class="provider" data-country="ni">
