--- a/bedrock/firefox/templates/firefox/win10-welcome.html
+++ b/bedrock/firefox/templates/firefox/win10-welcome.html
@@ -51,7 +51,7 @@
     <button id="set-default" type="button" class="button-flat-dark">{{ _('Let’s do it') }}</button>
     <h2>{{ _('Make Firefox your default in 3 easy steps:') }}</h2>
     <ol>
-      <li>{{ _('Click the button below') }}</li>
+      <li>{{ _('Click the button above') }}</li>
       <li>{{ _('Scroll down to “Web browser”') }}</li>
       <li>{{ _('Choose Firefox') }}</li>
     </ol>
