Fixed Broken links

--- a/bedrock/foundation/templates/foundation/trademarks/policy.html
+++ b/bedrock/foundation/templates/foundation/trademarks/policy.html
@@ -57,7 +57,7 @@
 
       <ul>
         <li>
-          {% trans guidelines="https://www-archive.mozilla.org/foundation/identity-guidelines/" %}
+          {% trans guidelines="http://www-archive.mozilla.org/foundation/identity-guidelines/" %}
             Visual Guidelines: <a href="{{ guidelines }}">{{ guidelines }}</a>.
           {% endtrans %}
           <ul>
@@ -109,7 +109,7 @@
 
   <p>{% trans %}If you want to include all or part of a Mozilla trademark in a domain name, you have to receive written permission from Mozilla. People naturally associate domain names with organizations whose names sound similar. Almost any use of a Mozilla trademark in a domain name is likely to confuse consumers, thus running afoul of the overarching requirement that any use of a Mozilla trademark be non-confusing. If you would like to build a Mozilla, Firefox Internet browser, or Thunderbird e-mail client promotional site for your region, we encourage you to join an existing official localization project.{% endtrans %}</p>
 
-  <p>{% trans dnl='http://static.mozilla.com/foundation/documents/domain-name-license.pdf' %}
+  <p>{% trans dnl='https://static.mozilla.com/foundation/documents/domain-name-license.pdf' %}
       To receive written permission, please download and follow the directions as outlined in the <a href="{{ dnl }}">Domain Name License</a>.{% endtrans %}</p>
 
   <h2>{{ _('Services Related to Mozilla Software') }}</h2>
@@ -122,7 +122,7 @@
 
   <p>{% trans %}When it comes to the Mozilla Marks, there are some cool things you can do and some cool things you can't do - at least not without asking Mozilla.{% endtrans %}</p>
 
-  <p>{% trans store="//store.mozilla.org", comm="//communitystore.mozilla.org/" %}
+  <p>{% trans store="https://store.mozilla.org", comm="https://communitystore.mozilla.org/" %}
     You may make t-shirts, desktop wallpaper, or baseball caps with Mozilla Marks on them, though only for yourself and your friends (meaning people from whom you don't receive anything of value in return).  You can't put the Mozilla Mark(s) on anything that you produce commercially (whether or not you make a profit) -- at least not without receiving Mozilla's written permission.  Mozilla contracts with third party vendors that provide Mozilla products for sale. These vendors own and operate the <a href="{{ store }}">Mozilla Store</a> and the <a href="{{ comm }}">Mozilla Community Store</a>.  The Mozilla Store offers T-shirts, CDs and other merchandise branded with Mozilla product logos.  The Mozilla Community Store offers items that are designed by a member of the worldwide Mozilla community.{% endtrans %}</p>
 
   <p>{% trans %}There is one additional broad category of things you can't do with Mozilla's Marks.{% endtrans %}</p>
