--- a/bedrock/foundation/templates/foundation/trademarks/policy.html
+++ b/bedrock/foundation/templates/foundation/trademarks/policy.html
@@ -122,7 +122,7 @@
 
   <p>{% trans %}When it comes to the Mozilla Marks, there are some cool things you can do and some cool things you can't do - at least not without asking Mozilla.{% endtrans %}</p>
 
-  <p>{% trans store="https://store.mozilla.org", comm="https://communitystore.mozilla.org/" %}
+  <p>{% trans store="https:http//store.mozilla.org", comm="http://communitystore.mozilla.org/" %}
     You may make t-shirts, desktop wallpaper, or baseball caps with Mozilla Marks on them, though only for yourself and your friends (meaning people from whom you don't receive anything of value in return).  You can't put the Mozilla Mark(s) on anything that you produce commercially (whether or not you make a profit) -- at least not without receiving Mozilla's written permission.  Mozilla contracts with third party vendors that provide Mozilla products for sale. These vendors own and operate the <a href="{{ store }}">Mozilla Store</a> and the <a href="{{ comm }}">Mozilla Community Store</a>.  The Mozilla Store offers T-shirts, CDs and other merchandise branded with Mozilla product logos.  The Mozilla Community Store offers items that are designed by a member of the worldwide Mozilla community.{% endtrans %}</p>
 
   <p>{% trans %}There is one additional broad category of things you can't do with Mozilla's Marks.{% endtrans %}</p>
